--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -289,7 +289,7 @@
   "staking.delegationCenter.totalSlots": "Total slots",
   "staking.delegationCenter.undelegate.dialog.adaLabel": "ADA",
   "staking.delegationCenter.undelegate.dialog.confirmButtonLabel": "Undelegate",
-  "staking.delegationCenter.undelegate.dialog.confirmUneligibleCheck": "I understand that I will not be eligible to earn rewards when my stake is undelegated.",
+  "staking.delegationCenter.undelegate.dialog.confirmIneligibleCheck": "I understand that I will not be eligible to earn rewards when my stake is undelegated.",
   "staking.delegationCenter.undelegate.dialog.confirmUnsupportCheck": "I understand that I am not supporting the Cardano network when my stake is undelegated.",
   "staking.delegationCenter.undelegate.dialog.descriptionWithTicker": "<p>The stake from your wallet <strong>{walletName}</strong> is currently delegated to the <strong>[{stakePoolTicker}] {stakePoolName}</strong> stake pool.</p><p>Do you want to undelegate your stake and stop earning rewards?</p>",
   "staking.delegationCenter.undelegate.dialog.descriptionWithUnknownTicker": "<p>The stake from your wallet <strong>{walletName}</strong> is currently delegated to the <strong>{stakePoolTicker}</strong> stake pool.</p><p>Do you want to undelegate your stake and stop earning rewards?</p>",
