--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -515,13 +515,14 @@
   "wallet.create.dialog.validateStep": "Validate",
   "wallet.create.dialog.walletNameHint": "Enter wallet name",
   "wallet.import.file.dialog.buttonLabel": "Import wallets",
-  "wallet.import.file.dialog.description": "<p>This feature enables you to import wallets from the production version of Daedalus, or from the Daedalus state directory. </p> <p>If you don’t have the complete state directory, then you will need either the ‘Secrets’ or ‘Secrets-1.0’ folder containing the ‘secret.key’ file to be able to import a wallet, although without the complete state directory Daedalus won’t be able to detect your wallet names. </p> <p>If you don’t have either the ‘Secrets’ or the ‘Secrets-1.0’ folder containing the ‘secret.key’ file, then you cannot import wallets using this feature.</p>",
+  "wallet.import.file.dialog.description": "<p>This feature enables you to import wallets from the previous version of Daedalus, from the Daedalus state directory, or from a ‘secret.key’ file.</p> <p>It can be used to import wallets quickly without entering the wallet recovery phrase for each wallet, or to import wallets for which you have lost your wallet recovery phrase.</p> <p>After importing a wallet for which you have lost your wallet recovery phrase, please create a new wallet and transfer all funds from the old wallet to the new wallet. <strong>Keep the wallet recovery phrase for your new wallet secure.</strong></p>",
   "wallet.import.file.dialog.importFromLabel": "Import from:",
   "wallet.import.file.dialog.linkLabel": "Learn more",
   "wallet.import.file.dialog.linkUrl": "https://iohk.zendesk.com/hc/en-us/articles/900000623463",
-  "wallet.import.file.dialog.noWallets": "No wallets found. Make sure you have selected a Daedalus state directory which contains the ‘Secrets’ or `Secrets-1.0` folder with a `secret.key` file inside.",
   "wallet.import.file.dialog.secretFileLabel": "Select Daedalus 'secret.key' file:",
+  "wallet.import.file.dialog.secretFileNoWallets": "No wallets found. Make sure you have selected a valid `secret.key` file.",
   "wallet.import.file.dialog.secretFileOptionLabel": "Daedalus 'secret.key' file",
+  "wallet.import.file.dialog.stateDirNoWallets": "No wallets found. Make sure you have selected a Daedalus state directory which contains the ‘Secrets’ or `Secrets-1.0` folder with a `secret.key` file inside.",
   "wallet.import.file.dialog.stateDirOptionLabel": "Daedalus state directory",
   "wallet.import.file.dialog.stateFolderLabel": "Select Daedalus state directory:",
   "wallet.import.file.dialog.title": "Import wallets",
@@ -649,12 +650,13 @@
   "wallet.select.import.dialog.description": "These wallets were found in your Daedalus state directory.<p>Please select the wallets you want to import.</p>",
   "wallet.select.import.dialog.enterWalletNameTooltip": "Enter a wallet name first",
   "wallet.select.import.dialog.importingWallet": "Importing wallet...",
+  "wallet.select.import.dialog.linkLabel": "Learn more",
+  "wallet.select.import.dialog.linkUrl": "https://iohk.zendesk.com/hc/en-us/articles/900000623463",
   "wallet.select.import.dialog.noPassword": "No password",
   "wallet.select.import.dialog.notFound": "Name not found",
   "wallet.select.import.dialog.passwordProtected": "Password protected",
   "wallet.select.import.dialog.title": "Found wallets",
   "wallet.select.import.dialog.unamedWalletsTitle": "Unnamed wallets",
-  "wallet.select.import.dialog.unamedWalletsTooltip": "The following wallets were found in your secret keys file, but matching entries were not found in your wallet database. They are probably wallets you have previously deleted, or are not in your wallet database because of data corruption or a similar issue. You can ignore them, or you can try importing them if wallets are missing from the list of found wallets above.",
   "wallet.select.import.dialog.walletExists": "Wallet already exists",
   "wallet.select.import.dialog.walletImported": "Wallet imported",
   "wallet.select.import.dialog.walletName": "Enter wallet name",
