--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -515,15 +515,16 @@
   "wallet.create.dialog.validateStep": "!!!Validate",
   "wallet.create.dialog.walletNameHint": "ウォレット名を入力してください",
   "wallet.import.file.dialog.buttonLabel": "ウォレットをインポートする",
-  "wallet.import.file.dialog.description": "<p>この機能により、Daedalus製品バージョンまたはDaedalusステータスディレクトリーからウォレットをインポートすることができます。</p> <p> 完全なステータスディレクトリーがなくても、secret.keyファイルが保存されたSecretsフォルダーまたはSecrets-1.0フォルダーのいずれかがあればウォレットをインポートすることはできます。ただし完全なステータスディレクトリーがない場合、Daedalusはウォレット名を検知することができません。</p> <p>secret.keyファイルが保存されたSecretsフォルダーまたはSecrets-1.0フォルダーのいずれもない場合は、本機能を使用してウォレットをインポートすることはできません。</p>",
-  "wallet.import.file.dialog.importFromLabel": "!!!Import from:",
+  "wallet.import.file.dialog.description": "<p>この機能により、Daedalusの旧バージョン、Daedalusステータスディレクトリー、またはsecret.keyファイルからウォレットをインポートすることができます。</p> <p>各ウォレットの復元フレーズを入力せずに素早くウォレットをインポートできるほか、復元フレーズを紛失したウォレットのインポートも可能です。</p> <p>復元フレーズを紛失したウォレットをインポートした場合は、インポート後に新規ウォレットを作成してすべての資金を旧ウォレットから移し、<strong>新しいウォレットの復元フレーズを安全な場所に保管してください。</strong></p>",
+  "wallet.import.file.dialog.importFromLabel": "インポート元：",
   "wallet.import.file.dialog.linkLabel": "もっと知る",
   "wallet.import.file.dialog.linkUrl": "https://iohk.zendesk.com/hc/ja/articles/900000623463",
-  "wallet.import.file.dialog.noWallets": "ウォレットが見つかりません。選択したDaedalusステータスディレクトリーに、secret.keyファイルが保存されたSecretsフォルダーまたはSecrets-1.0フォルダーのいずれかが含まれていることを確認してください。",
-  "wallet.import.file.dialog.secretFileLabel": "!!!Select Daedalus 'secret.key' file:",
-  "wallet.import.file.dialog.secretFileOptionLabel": "!!!Daedalus 'secret.key' file",
-  "wallet.import.file.dialog.stateDirOptionLabel": "!!!Daedalus state directory",
-  "wallet.import.file.dialog.stateFolderLabel": "Daedalusステータスフォルダーを選択：",
+  "wallet.import.file.dialog.secretFileLabel": "Daedalusのsecret.keyファイルを選択してください:",
+  "wallet.import.file.dialog.secretFileNoWallets": "ウォレットが見つかりません。有効なsecret.keyファイルが選択されているか確認してください。",
+  "wallet.import.file.dialog.secretFileOptionLabel": "Daedalusのsecret.keyファイル",
+  "wallet.import.file.dialog.stateDirNoWallets": "ウォレットが見つかりません。選択したDaedalusステータスディレクトリーに、secret.keyファイルが保存されたSecretsフォルダーまたはSecrets-1.0フォルダーのいずれかが含まれていることを確認してください。",
+  "wallet.import.file.dialog.stateDirOptionLabel": "Daedalusステータスディレクトリー",
+  "wallet.import.file.dialog.stateFolderLabel": "Daedalusステータスディレクトリーを選択してください:",
   "wallet.import.file.dialog.title": "ウォレットをインポートする",
   "wallet.legacy.badge.label": "残高",
   "wallet.legacy.notification.actionLearnMore": "もっと知る",
@@ -649,12 +650,13 @@
   "wallet.select.import.dialog.description": "Daedalusステータスディレクトリーに以下のウォレットが見つかりました。<p>インポートするウォレットを選択してください。</p>",
   "wallet.select.import.dialog.enterWalletNameTooltip": "先にウォレット名を入力してください",
   "wallet.select.import.dialog.importingWallet": "ウォレットをインポート中…",
+  "wallet.select.import.dialog.linkLabel": "もっと知る",
+  "wallet.select.import.dialog.linkUrl": "https://iohk.zendesk.com/hc/ja/articles/900000623463",
   "wallet.select.import.dialog.noPassword": "パスワードなし",
   "wallet.select.import.dialog.notFound": "ウォレット名不明",
   "wallet.select.import.dialog.passwordProtected": "パスワード設定済み",
   "wallet.select.import.dialog.title": "既存のウォレット",
   "wallet.select.import.dialog.unamedWalletsTitle": "名称不明のウォレット",
-  "wallet.select.import.dialog.unamedWalletsTooltip": "secret.keyファイルに次のウォレットが見つかりましたが、ウォレットデータベースに対応するウォレットが見つかりません。これらは以前に削除されたウォレットか、データの損傷または類似する不具合によりデータベースに含まれていない可能性があります。これらは無視しても構いません。また、上記の検知されたウォレットリストに含まれていないウォレットである場合はインポートを試みることもできます。",
   "wallet.select.import.dialog.walletExists": "既存のウォレット",
   "wallet.select.import.dialog.walletImported": "ウォレットをインポート済み",
   "wallet.select.import.dialog.walletName": "ウォレット名を入力してください",
