--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -45,7 +45,7 @@
   "daedalus.diagnostics.dialog.cardanoWalletApiPort": "Cardanoウォレットポート",
   "daedalus.diagnostics.dialog.cardanoWalletPID": "CardanoウォレットプロセスID",
   "daedalus.diagnostics.dialog.cardanoWalletVersion": "Cardanoウォレットバージョン",
-  "daedalus.diagnostics.dialog.checkingNodeTime": "Cardanoノード時間確認",
+  "daedalus.diagnostics.dialog.checkingNodeTime": "システム時刻確認中",
   "daedalus.diagnostics.dialog.code": "コード",
   "daedalus.diagnostics.dialog.connected": "アプリに接続",
   "daedalus.diagnostics.dialog.connectionError": "接続エラー",
@@ -85,8 +85,8 @@
   "daedalus.diagnostics.dialog.syncPercentage": "同期率",
   "daedalus.diagnostics.dialog.synced": "同期済み",
   "daedalus.diagnostics.dialog.system.info": "システム情報",
-  "daedalus.diagnostics.dialog.systemTimeCorrect": "システム時間正常",
-  "daedalus.diagnostics.dialog.systemTimeIgnored": "システム時間無視",
+  "daedalus.diagnostics.dialog.systemTimeCorrect": "システム時刻正常",
+  "daedalus.diagnostics.dialog.systemTimeIgnored": "システム時刻無視",
   "daedalus.diagnostics.dialog.unknownDiskSpace": "不明",
   "daedalus.diagnostics.dialog.unknownDiskSpaceSupportUrl": "https://iohk.zendesk.com/hc/ja/articles/360035654533",
   "environment.apiName.cardano": "Cardano",
