[DDW-176] Improve Undelegate wizard fees calculation logic

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -287,7 +287,7 @@
   "staking.delegationCenter.stakePoolTooltipTickerEpoch": "From epoch {fromEpoch}",
   "staking.delegationCenter.syncingTooltipLabel": "Syncing {syncingProgress}%",
   "staking.delegationCenter.totalSlots": "Total slots",
-  "staking.delegationCenter.undelegate.dialog.adaLabel": "ADA",
+  "staking.delegationCenter.undelegate.dialog.calculatingFees": "Calculating fees",
   "staking.delegationCenter.undelegate.dialog.confirmButtonLabel": "Undelegate",
   "staking.delegationCenter.undelegate.dialog.confirmIneligibleCheck": "I understand that I will not be eligible to earn rewards when my stake is undelegated.",
   "staking.delegationCenter.undelegate.dialog.confirmUnsupportCheck": "I understand that I am not supporting the Cardano network when my stake is undelegated.",
@@ -327,6 +327,7 @@
   "staking.delegationSetup.chooseWallet.step.dialog.selectWalletInputPlaceholder": "Select Wallet",
   "staking.delegationSetup.chooseWallet.step.dialog.stepIndicatorLabel": "STEP {currentStep} OF {totalSteps}",
   "staking.delegationSetup.chooseWallet.step.dialog.title": "Delegate wallet",
+  "staking.delegationSetup.confirmation.step.dialog.calculatingFees": "Calculating fees",
   "staking.delegationSetup.confirmation.step.dialog.cancelButtonLabel": "Cancel",
   "staking.delegationSetup.confirmation.step.dialog.confirmButtonLabel": "Confirm",
   "staking.delegationSetup.confirmation.step.dialog.description": "Confirm your delegation for <span>{selectedWalletName}</span> wallet to <span>[{selectedPoolTicker}]</span> stake pool by posting your delegation preferences on the Cardano blockchain.",
