--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -736,7 +736,10 @@
   "wallet.settings.recoveryPhraseVerificationCheckedWarning": "You verified the recovery phrase for this wallet <b>{timeAgo}</b>.",
   "wallet.settings.recoveryPhraseVerificationDescription": "Funds in this wallet can only be recovered using the correct wallet recovery phrase, which is a unique {wordCount}-word string you were shown and asked to write down when creating this wallet. You can re-enter your wallet recovery phrase to verify that you have the correct recovery phrase for this wallet.",
   "wallet.settings.recoveryPhraseVerificationNeverNotification": "We recommend that you verify your wallet recovery phrase.",
-  "wallet.settings.recoveryPhraseVerificationNeverOk": "We recommend that you verify your wallet recovery phrase in <b>{timeUntilWarning}</b>.",
+  "wallet.settings.recoveryPhraseVerificationNeverOkTimeUntil": "We recommend that you verify your wallet recovery phrase in <b>{timeUntilWarning}</b>.",
+  "wallet.settings.recoveryPhraseVerificationNeverOkFewMonths": "We recommend that you verify your wallet recovery phrase <b>in a few months</b>.",
+  "wallet.settings.recoveryPhraseVerificationNeverOkFewWeeks": "We recommend that you verify your wallet recovery phrase <b>in a few weeks</b>.",
+  "wallet.settings.recoveryPhraseVerificationNeverOkFewDays": "We recommend that you verify your wallet recovery phrase <b>in in a few days</b>.",
   "wallet.settings.recoveryPhraseVerificationNeverWarning": "We recommend that you verify your wallet recovery phrase.",
   "wallet.settings.recoveryPhraseVerificationTitle": "Do you have your wallet recovery phrase?",
   "wallet.settings.resyncWallet.description": "If you are experiencing issues with your wallet, or think you have an incorrect balance or transaction history, you can delete the local data stored by Daedalus and resync with the blockchain.",
