--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -730,15 +730,18 @@
   "wallet.settings.recoveryPhraseStep4SupportTitle": "記事を読む",
   "wallet.settings.recoveryPhraseStep4SupportUrl": "https://iohk.zendesk.com/hc/ja/articles/360035341914 ",
   "wallet.settings.recoveryPhraseStep4Title": "不一致",
-  "wallet.settings.recoveryPhraseVerificationButton": "ウォレット復元フレーズを検証する",
-  "wallet.settings.recoveryPhraseVerificationCheckedNotification": "このウォレットの復元フレーズは<b>{timeAgo}</b>に検証されました。ウォレット復元フレーズを再度検証してください。",
-  "wallet.settings.recoveryPhraseVerificationCheckedOk": "このウォレットの復元フレーズは<b>{timeAgo}</b>に検証されました。",
-  "wallet.settings.recoveryPhraseVerificationCheckedWarning": "このウォレットの復元フレーズは<b>{timeAgo}</b>に検証されました。",
-  "wallet.settings.recoveryPhraseVerificationDescription": "ウォレットの資金を復元するには、正確なウォレット復元フレーズが必要です。ウォレット復元フレーズは{wordCount}語からなり、ウォレットの作成時に書き留めるために表示されたものです。お持ちのウォレット復元フレーズを再入力すると、フレーズが正しいかどうか確認することができます。",
-  "wallet.settings.recoveryPhraseVerificationNeverNotification": "ウォレット復元フレーズを検証してください。",
-  "wallet.settings.recoveryPhraseVerificationNeverOk": "ウォレット復元フレーズを<b>{timeUntilWarning}</b>以内に検証してください。",
-  "wallet.settings.recoveryPhraseVerificationNeverWarning": "ウォレット復元フレーズを検証してください。",
-  "wallet.settings.recoveryPhraseVerificationTitle": "ウォレット復元フレーズをお持ちですか。",
+  "wallet.settings.recoveryPhraseVerification.button": "ウォレット復元フレーズを検証する",
+  "wallet.settings.recoveryPhraseVerification.checkedNotification": "このウォレットの復元フレーズは<b>{timeAgo}</b>に検証されました。ウォレット復元フレーズを再度検証してください。",
+  "wallet.settings.recoveryPhraseVerification.checkedOk": "このウォレットの復元フレーズは<b>{timeAgo}</b>に検証されました。",
+  "wallet.settings.recoveryPhraseVerification.checkedWarning": "このウォレットの復元フレーズは<b>{timeAgo}</b>に検証されました。",
+  "wallet.settings.recoveryPhraseVerification.description": "ウォレットの資金を復元するには、正確なウォレット復元フレーズが必要です。ウォレット復元フレーズは{wordCount}語からなり、ウォレットの作成時に書き留めるために表示されたものです。お持ちのウォレット復元フレーズを再入力すると、フレーズが正しいかどうか確認することができます。",
+  "wallet.settings.recoveryPhraseVerification.neverNotification": "ウォレット復元フレーズを検証してください。",
+  "wallet.settings.recoveryPhraseVerification.neverOkFewDays": "ウォレット復元フレーズを数日以内に検証してください",
+  "wallet.settings.recoveryPhraseVerification.neverOkFewMonths": "ウォレット復元フレーズを数か月以内に検証してください",
+  "wallet.settings.recoveryPhraseVerification.neverOkFewWeeks": "ウォレット復元フレーズを数週間以内に検証してください",
+  "wallet.settings.recoveryPhraseVerification.neverOkTimeUntil": "ウォレット復元フレーズを<b>{timeUntilWarning}</b>以内に検証してください",
+  "wallet.settings.recoveryPhraseVerification.neverWarning": "ウォレット復元フレーズを検証してください。",
+  "wallet.settings.recoveryPhraseVerification.title": "ウォレット復元フレーズをお持ちですか。",
   "wallet.settings.resyncWallet.description": "ウォレットに不具合が生じている場合、または残高やトランザクション履歴が不正確であると思われる場合は、Daedalusに保存されたローカルデータを削除してブロックチェーンと再同期することができます。",
   "wallet.settings.resyncWallet.header": "ウォレットとブロックチェーンの再同期",
   "wallet.settings.resyncWalletButtonLabel": "ウォレットを再同期",
