--- a/source/renderer/app/i18n/locales/defaultMessages.json
+++ b/source/renderer/app/i18n/locales/defaultMessages.json
@@ -7459,9 +7459,9 @@
           "line": 27
         },
         "file": "source/renderer/app/components/wallet/settings/WalletRecoveryPhraseVerificationWidget.js",
-        "id": "wallet.settings.recoveryPhraseVerificationTitle",
+        "id": "wallet.settings.recoveryPhraseVerification.title",
         "start": {
-          "column": 35,
+          "column": 9,
           "line": 22
         }
       },
@@ -7473,9 +7473,9 @@
           "line": 34
         },
         "file": "source/renderer/app/components/wallet/settings/WalletRecoveryPhraseVerificationWidget.js",
-        "id": "wallet.settings.recoveryPhraseVerificationDescription",
+        "id": "wallet.settings.recoveryPhraseVerification.description",
         "start": {
-          "column": 41,
+          "column": 15,
           "line": 28
         }
       },
@@ -7487,10 +7487,52 @@
           "line": 41
         },
         "file": "source/renderer/app/components/wallet/settings/WalletRecoveryPhraseVerificationWidget.js",
-        "id": "wallet.settings.recoveryPhraseVerificationNeverOk",
+        "id": "wallet.settings.recoveryPhraseVerification.neverOkTimeUntil",
         "start": {
-          "column": 37,
+          "column": 20,
           "line": 35
+        }
+      },
+      {
+        "defaultMessage": "!!!We recommend that you verify your wallet recovery phrase in a few months.",
+        "description": "Label for the recoveryPhraseVerificationNeverOk on wallet settings.",
+        "end": {
+          "column": 3,
+          "line": 48
+        },
+        "file": "source/renderer/app/components/wallet/settings/WalletRecoveryPhraseVerificationWidget.js",
+        "id": "wallet.settings.recoveryPhraseVerification.neverOkFewMonths",
+        "start": {
+          "column": 20,
+          "line": 42
+        }
+      },
+      {
+        "defaultMessage": "!!!We recommend that you verify your wallet recovery phrase in a few weeks.",
+        "description": "Label for the recoveryPhraseVerificationNeverOk on wallet settings.",
+        "end": {
+          "column": 3,
+          "line": 55
+        },
+        "file": "source/renderer/app/components/wallet/settings/WalletRecoveryPhraseVerificationWidget.js",
+        "id": "wallet.settings.recoveryPhraseVerification.neverOkFewWeeks",
+        "start": {
+          "column": 19,
+          "line": 49
+        }
+      },
+      {
+        "defaultMessage": "!!!We recommend that you verify your wallet recovery phrase in a few days.",
+        "description": "Label for the recoveryPhraseVerificationNeverOk on wallet settings.",
+        "end": {
+          "column": 3,
+          "line": 62
+        },
+        "file": "source/renderer/app/components/wallet/settings/WalletRecoveryPhraseVerificationWidget.js",
+        "id": "wallet.settings.recoveryPhraseVerification.neverOkFewDays",
+        "start": {
+          "column": 18,
+          "line": 56
         }
       },
       {
@@ -7498,13 +7540,13 @@
         "description": "Label for the recoveryPhraseVerificationNeverWarning on wallet settings.",
         "end": {
           "column": 3,
-          "line": 48
+          "line": 69
         },
         "file": "source/renderer/app/components/wallet/settings/WalletRecoveryPhraseVerificationWidget.js",
-        "id": "wallet.settings.recoveryPhraseVerificationNeverWarning",
+        "id": "wallet.settings.recoveryPhraseVerification.neverWarning",
         "start": {
-          "column": 42,
-          "line": 42
+          "column": 16,
+          "line": 63
         }
       },
       {
@@ -7512,13 +7554,13 @@
         "description": "Label for the recoveryPhraseVerificationNeverNotification on wallet settings.",
         "end": {
           "column": 3,
-          "line": 55
+          "line": 76
         },
         "file": "source/renderer/app/components/wallet/settings/WalletRecoveryPhraseVerificationWidget.js",
-        "id": "wallet.settings.recoveryPhraseVerificationNeverNotification",
+        "id": "wallet.settings.recoveryPhraseVerification.neverNotification",
         "start": {
-          "column": 47,
-          "line": 49
+          "column": 21,
+          "line": 70
         }
       },
       {
@@ -7526,13 +7568,13 @@
         "description": "Label for the recoveryPhraseVerificationCheckedOk on wallet settings.",
         "end": {
           "column": 3,
-          "line": 62
+          "line": 83
         },
         "file": "source/renderer/app/components/wallet/settings/WalletRecoveryPhraseVerificationWidget.js",
-        "id": "wallet.settings.recoveryPhraseVerificationCheckedOk",
+        "id": "wallet.settings.recoveryPhraseVerification.checkedOk",
         "start": {
-          "column": 39,
-          "line": 56
+          "column": 13,
+          "line": 77
         }
       },
       {
@@ -7540,13 +7582,13 @@
         "description": "Label for the recoveryPhraseVerificationCheckedWarning on wallet settings.",
         "end": {
           "column": 3,
-          "line": 69
+          "line": 90
         },
         "file": "source/renderer/app/components/wallet/settings/WalletRecoveryPhraseVerificationWidget.js",
-        "id": "wallet.settings.recoveryPhraseVerificationCheckedWarning",
+        "id": "wallet.settings.recoveryPhraseVerification.checkedWarning",
         "start": {
-          "column": 44,
-          "line": 63
+          "column": 18,
+          "line": 84
         }
       },
       {
@@ -7554,13 +7596,13 @@
         "description": "Label for the recoveryPhraseVerificationCheckedNotification on wallet settings.",
         "end": {
           "column": 3,
-          "line": 76
+          "line": 97
         },
         "file": "source/renderer/app/components/wallet/settings/WalletRecoveryPhraseVerificationWidget.js",
-        "id": "wallet.settings.recoveryPhraseVerificationCheckedNotification",
+        "id": "wallet.settings.recoveryPhraseVerification.checkedNotification",
         "start": {
-          "column": 49,
-          "line": 70
+          "column": 23,
+          "line": 91
         }
       },
       {
@@ -7568,13 +7610,13 @@
         "description": "Label for the recoveryPhraseVerificationButton on wallet settings.",
         "end": {
           "column": 3,
-          "line": 82
+          "line": 103
         },
         "file": "source/renderer/app/components/wallet/settings/WalletRecoveryPhraseVerificationWidget.js",
-        "id": "wallet.settings.recoveryPhraseVerificationButton",
+        "id": "wallet.settings.recoveryPhraseVerification.button",
         "start": {
-          "column": 36,
-          "line": 77
+          "column": 10,
+          "line": 98
         }
       }
     ],
