[DDW-176] Improve delegation fee calculation (#2002)
* [DDW-176] Improve 'Delegate' wizard delegation fee calculation logic

* [DDW-176] Improve Undelegate wizard fees calculation logic

* [DDW-176] Adds Japanese translations

* [DDW-176] Improve fee calculation logic and fix all racing conditions

* [DDW-176] Fix failing tests

* [DDW-176] Update comments

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -287,7 +287,7 @@
   "staking.delegationCenter.stakePoolTooltipTickerEpoch": "エポック{fromEpoch}より",
   "staking.delegationCenter.syncingTooltipLabel": "同期中{syncingProgress}%",
   "staking.delegationCenter.totalSlots": "総スロット",
-  "staking.delegationCenter.undelegate.dialog.adaLabel": "ADA",
+  "staking.delegationCenter.undelegate.dialog.calculatingFees": "手数料を計算しています",
   "staking.delegationCenter.undelegate.dialog.confirmButtonLabel": "委任を解除する",
   "staking.delegationCenter.undelegate.dialog.confirmIneligibleCheck": "ステークを委任していないと、報酬を得られないことを理解します。",
   "staking.delegationCenter.undelegate.dialog.confirmUnsupportCheck": "ステークを委任していないと、Cardanoネットワークをサポートできないことを理解します。",
@@ -327,6 +327,7 @@
   "staking.delegationSetup.chooseWallet.step.dialog.selectWalletInputPlaceholder": "ウォレットを選択してください",
   "staking.delegationSetup.chooseWallet.step.dialog.stepIndicatorLabel": "ステップ{currentStep}/{totalSteps}",
   "staking.delegationSetup.chooseWallet.step.dialog.title": "ウォレットを委任する",
+  "staking.delegationSetup.confirmation.step.dialog.calculatingFees": "手数料を計算しています",
   "staking.delegationSetup.confirmation.step.dialog.cancelButtonLabel": "キャンセル",
   "staking.delegationSetup.confirmation.step.dialog.confirmButtonLabel": "確認",
   "staking.delegationSetup.confirmation.step.dialog.description": "委任設定をCardanoブロックチェーンに送信して<span>{selectedWalletName}</span>ウォレットの委任先が<span>「{selectedPoolTicker}」</span>ステークプールであることを確認します。",
