[DDW-33] Improve theming, adds missing translation

--- a/source/renderer/app/i18n/locales/defaultMessages.json
+++ b/source/renderer/app/i18n/locales/defaultMessages.json
@@ -7620,7 +7620,7 @@
         }
       },
       {
-        "defaultMessage": "!!!If you have restored this wallet from a paper wallet certificate you cannot use this feature to verify your wallet recovery phrase. In the next version of Daedalus, a new tool will be provided for the conversion of 27-word paper wallet recovery phrases to 12-word recovery phrases.",
+        "defaultMessage": "!!!If this wallet was restored from a paper wallet certificate, you cannot use this feature to verify your wallet recovery phrase. Paper wallet recovery phrase to regular wallet recovery phrase conversion will be available in Daedalus soon.",
         "description": "Description for the paperWallet instructions on wallet settings.",
         "end": {
           "column": 3,
