--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -742,7 +742,7 @@
   "wallet.settings.recoveryPhraseVerification.neverOkFewWeeks": "We recommend that you verify your wallet recovery phrase in a few weeks.",
   "wallet.settings.recoveryPhraseVerification.neverOkTimeUntil": "We recommend that you verify your wallet recovery phrase in <b>{timeUntilWarning}</b>.",
   "wallet.settings.recoveryPhraseVerification.neverWarning": "We recommend that you verify your wallet recovery phrase.",
-  "wallet.settings.recoveryPhraseVerification.paperWalletDescription": "If you have restored this wallet from a paper wallet certificate you cannot use this feature to verify your wallet recovery phrase. In the next version of Daedalus, a new tool will be provided for the conversion of 27-word paper wallet recovery phrases to 12-word recovery phrases.",
+  "wallet.settings.recoveryPhraseVerification.paperWalletDescription": "If this wallet was restored from a paper wallet certificate, you cannot use this feature to verify your wallet recovery phrase. Paper wallet recovery phrase to regular wallet recovery phrase conversion will be available in Daedalus soon.",
   "wallet.settings.recoveryPhraseVerification.paperWalletTitle": "Paper wallet",
   "wallet.settings.recoveryPhraseVerification.title": "Do you have your wallet recovery phrase?",
   "wallet.settings.resyncWallet.description": "If you are experiencing issues with your wallet, or think you have an incorrect balance or transaction history, you can delete the local data stored by Daedalus and resync with the blockchain.",
