--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -713,11 +713,11 @@
   "wallet.settings.recoveryPhraseInputHint": "復元フレーズを入力してください",
   "wallet.settings.recoveryPhraseInputNoResults": "該当するフレーズは見つかりませんでした",
   "wallet.settings.recoveryPhraseStep1Button": "続ける",
-  "wallet.settings.recoveryPhraseStep1Paragraph1": "お持ちの復元フレーズが正しいかどうか確認するには、次の画面で復元フレーズを入力してください。このウォレットは{wordCount}語の復元フレーズを使用します。",
+  "wallet.settings.recoveryPhraseStep1Paragraph1": "お持ちの復元フレーズが正しいかどうか確認するには、次の画面で復元フレーズを入力してください。",
   "wallet.settings.recoveryPhraseStep1Paragraph2": "誰かに見られていませんか。ウォレット復元フレーズを入力する際には、画面を誰にも見られないように注意してください。",
   "wallet.settings.recoveryPhraseStep1Title": "ウォレット復元フレーズ検証",
   "wallet.settings.recoveryPhraseStep2Button": "検証する",
-  "wallet.settings.recoveryPhraseStep2Description": "{wordCount}語のウォレット復元フレーズを入力してください。入力は正しい順序で行ってください。",
+  "wallet.settings.recoveryPhraseStep2Description": "のウォレット復元フレーズを入力してください。入力は正しい順序で行ってください。",
   "wallet.settings.recoveryPhraseStep2InvalidMnemonics": "無効な復元フレーズ",
   "wallet.settings.recoveryPhraseStep2Subtitle": "ウォレット復元フレーズ",
   "wallet.settings.recoveryPhraseStep2Title": "ウォレット復元フレーズ検証",
@@ -735,7 +735,7 @@
   "wallet.settings.recoveryPhraseVerification.checkedNotification": "このウォレットの復元フレーズは<b>{timeAgo}</b>に検証されました。ウォレット復元フレーズを再度検証してください。",
   "wallet.settings.recoveryPhraseVerification.checkedOk": "このウォレットの復元フレーズは<b>{timeAgo}</b>に検証されました。",
   "wallet.settings.recoveryPhraseVerification.checkedWarning": "このウォレットの復元フレーズは<b>{timeAgo}</b>に検証されました。",
-  "wallet.settings.recoveryPhraseVerification.description": "ウォレットの資金を復元するには、正確なウォレット復元フレーズが必要です。ウォレット復元フレーズは{wordCount}語からなり、ウォレットの作成時に書き留めるために表示されたものです。お持ちのウォレット復元フレーズを再入力すると、フレーズが正しいかどうか確認することができます。",
+  "wallet.settings.recoveryPhraseVerification.description": "ウォレットの資金を復元するには、正確なウォレット復元フレーズが必要です。ウォレット復元フレーズはからなり、ウォレットの作成時に書き留めるために表示されたものです。お持ちのウォレット復元フレーズを再入力すると、フレーズが正しいかどうか確認することができます。",
   "wallet.settings.recoveryPhraseVerification.neverNotification": "ウォレット復元フレーズを検証してください。",
   "wallet.settings.recoveryPhraseVerification.neverOkFewDays": "ウォレット復元フレーズを数日以内に検証してください",
   "wallet.settings.recoveryPhraseVerification.neverOkFewMonths": "ウォレット復元フレーズを数か月以内に検証してください",
