--- a/source/renderer/app/i18n/locales/defaultMessages.json
+++ b/source/renderer/app/i18n/locales/defaultMessages.json
@@ -9179,13 +9179,13 @@
         "description": "Select import wallets dialog title",
         "end": {
           "column": 3,
-          "line": 31
+          "line": 37
         },
         "file": "source/renderer/app/components/wallet/wallet-import/WalletSelectImportDialog.js",
         "id": "wallet.select.import.dialog.title",
         "start": {
           "column": 9,
-          "line": 27
+          "line": 33
         }
       },
       {
@@ -9193,13 +9193,13 @@
         "description": "These wallets were found in your Daedalus state directory. Please select the wallets you want to import.",
         "end": {
           "column": 3,
-          "line": 38
+          "line": 44
         },
         "file": "source/renderer/app/components/wallet/wallet-import/WalletSelectImportDialog.js",
         "id": "wallet.select.import.dialog.description",
         "start": {
           "column": 15,
-          "line": 32
+          "line": 38
         }
       },
       {
@@ -9207,13 +9207,13 @@
         "description": "unamedWalletsTitle",
         "end": {
           "column": 3,
-          "line": 43
+          "line": 49
         },
         "file": "source/renderer/app/components/wallet/wallet-import/WalletSelectImportDialog.js",
         "id": "wallet.select.import.dialog.unamedWalletsTitle",
         "start": {
           "column": 22,
-          "line": 39
+          "line": 45
         }
       },
       {
@@ -9221,13 +9221,13 @@
         "description": "Password protected",
         "end": {
           "column": 3,
-          "line": 48
+          "line": 54
         },
         "file": "source/renderer/app/components/wallet/wallet-import/WalletSelectImportDialog.js",
         "id": "wallet.select.import.dialog.passwordProtected",
         "start": {
           "column": 21,
-          "line": 44
+          "line": 50
         }
       },
       {
@@ -9235,13 +9235,13 @@
         "description": "Wallet already exists",
         "end": {
           "column": 3,
-          "line": 53
+          "line": 59
         },
         "file": "source/renderer/app/components/wallet/wallet-import/WalletSelectImportDialog.js",
         "id": "wallet.select.import.dialog.walletExists",
         "start": {
           "column": 16,
-          "line": 49
+          "line": 55
         }
       },
       {
@@ -9249,13 +9249,13 @@
         "description": "No password",
         "end": {
           "column": 3,
-          "line": 58
+          "line": 64
         },
         "file": "source/renderer/app/components/wallet/wallet-import/WalletSelectImportDialog.js",
         "id": "wallet.select.import.dialog.noPassword",
         "start": {
           "column": 14,
-          "line": 54
+          "line": 60
         }
       },
       {
@@ -9263,13 +9263,13 @@
         "description": "Importing wallet...",
         "end": {
           "column": 3,
-          "line": 63
+          "line": 69
         },
         "file": "source/renderer/app/components/wallet/wallet-import/WalletSelectImportDialog.js",
         "id": "wallet.select.import.dialog.importingWallet",
         "start": {
           "column": 19,
-          "line": 59
+          "line": 65
         }
       },
       {
@@ -9277,13 +9277,13 @@
         "description": "Enter wallet name",
         "end": {
           "column": 3,
-          "line": 68
+          "line": 74
         },
         "file": "source/renderer/app/components/wallet/wallet-import/WalletSelectImportDialog.js",
         "id": "wallet.select.import.dialog.walletName",
         "start": {
           "column": 14,
-          "line": 64
+          "line": 70
         }
       },
       {
@@ -9291,13 +9291,13 @@
         "description": "Name not found",
         "end": {
           "column": 3,
-          "line": 73
+          "line": 79
         },
         "file": "source/renderer/app/components/wallet/wallet-import/WalletSelectImportDialog.js",
         "id": "wallet.select.import.dialog.notFound",
         "start": {
           "column": 12,
-          "line": 69
+          "line": 75
         }
       },
       {
@@ -9305,27 +9305,27 @@
         "description": "Enter a wallet name first",
         "end": {
           "column": 3,
-          "line": 78
+          "line": 84
         },
         "file": "source/renderer/app/components/wallet/wallet-import/WalletSelectImportDialog.js",
         "id": "wallet.select.import.dialog.enterWalletNameTooltip",
         "start": {
           "column": 26,
-          "line": 74
+          "line": 80
         }
       },
       {
-        "defaultMessage": "!!!Daedalus supports up to 30 wallets. You will need to remove another wallet before you can import this one.",
+        "defaultMessage": "!!!Daedalus supports up to {maxWalletsCount} wallets. You will need to remove another wallet before you can import this one.",
         "description": "Max number of wallets reached",
         "end": {
           "column": 3,
-          "line": 84
+          "line": 90
         },
         "file": "source/renderer/app/components/wallet/wallet-import/WalletSelectImportDialog.js",
         "id": "wallet.select.import.dialog.maxWalletsReachedTooltip",
         "start": {
           "column": 28,
-          "line": 79
+          "line": 85
         }
       },
       {
@@ -9333,13 +9333,13 @@
         "description": "Wallet imported",
         "end": {
           "column": 3,
-          "line": 89
+          "line": 95
         },
         "file": "source/renderer/app/components/wallet/wallet-import/WalletSelectImportDialog.js",
         "id": "wallet.select.import.dialog.walletImported",
         "start": {
           "column": 18,
-          "line": 85
+          "line": 91
         }
       },
       {
@@ -9347,13 +9347,13 @@
         "description": "Import selected wallets",
         "end": {
           "column": 3,
-          "line": 94
+          "line": 100
         },
         "file": "source/renderer/app/components/wallet/wallet-import/WalletSelectImportDialog.js",
         "id": "wallet.select.import.dialog.buttonLabel",
         "start": {
           "column": 15,
-          "line": 90
+          "line": 96
         }
       },
       {
@@ -9361,13 +9361,13 @@
         "description": "Learn more",
         "end": {
           "column": 3,
-          "line": 99
+          "line": 105
         },
         "file": "source/renderer/app/components/wallet/wallet-import/WalletSelectImportDialog.js",
         "id": "wallet.select.import.dialog.linkLabel",
         "start": {
           "column": 13,
-          "line": 95
+          "line": 101
         }
       },
       {
@@ -9375,13 +9375,13 @@
         "description": "\"Learn more\" link URL on the wallet import file dialog",
         "end": {
           "column": 3,
-          "line": 105
+          "line": 111
         },
         "file": "source/renderer/app/components/wallet/wallet-import/WalletSelectImportDialog.js",
         "id": "wallet.select.import.dialog.linkUrl",
         "start": {
           "column": 11,
-          "line": 100
+          "line": 106
         }
       },
       {
@@ -9389,13 +9389,13 @@
         "description": "Close window",
         "end": {
           "column": 3,
-          "line": 110
+          "line": 116
         },
         "file": "source/renderer/app/components/wallet/wallet-import/WalletSelectImportDialog.js",
         "id": "wallet.select.import.dialog.closeWindow",
         "start": {
           "column": 15,
-          "line": 106
+          "line": 112
         }
       }
     ],
